bug 280386: Add sanity checking to nsScanner::SetPosition to help catch errors that could manifest in stranger ways. r=bzbarsky sr=jst